--- a/app/src/main/res/layout/movie_layout.xml
+++ b/app/src/main/res/layout/movie_layout.xml
@@ -4,7 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+<android.support.v7.widget.CardView
+    android:id="@+id/card"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/movieImage"
@@ -16,32 +20,33 @@
 
     <TextView
         android:id="@+id/movieTitle"
-        android:layout_width="297dp"
-        android:layout_height="15dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/movieImage"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Movie Title"
+        app:layout_constraintTop_toTopOf="@+id/card"
+        app:layout_constraintLeft_toRightOf="@+id/movieImage"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"/>
 
     <TextView
         android:id="@+id/movieOverview"
         android:layout_width="146dp"
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
-        android:text="TextView"
+        android:text="Description"
         app:layout_constraintStart_toStartOf="@+id/movieTitle"
-        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"/>
 
     <TextView
         android:id="@+id/movieRating"
         android:layout_width="123dp"
         android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="9"
+        android:layout_marginLeft="350dp"
         app:layout_constraintEnd_toEndOf="@+id/movieTitle"
         app:layout_constraintTop_toBottomOf="@+id/movieTitle" />
 
+</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
