--- a/app/src/main/res/layout/movie_layout.xml
+++ b/app/src/main/res/layout/movie_layout.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 <android.support.v7.widget.CardView
@@ -11,9 +10,9 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/movieImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/image"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:maxWidth="128dp"
         android:maxHeight="96dp"/>
