--- a/app/src/main/res/layout/movie_layout.xml
+++ b/app/src/main/res/layout/movie_layout.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true">
 <android.support.v7.widget.CardView
     android:id="@+id/card"
     android:layout_width="match_parent"
